k8s/auto-assignment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-assignment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-assignment
  template:
    metadata:
      labels:
        app: auto-assignment
    spec:
      containers:
        - name: auto-assignment
          image: us.gcr.io/servicedesk-dev-361311/auto-assignment
