k8s/category-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
        - name: category
          image: us.gcr.io/servicedesk-dev-361311/category 
---

apiVersion: v1
kind: Service
metadata:
  name: category-service
spec:
  selector:
    app: category
  ports:
    - name: category
      protocol: TCP
      port: 5002
      targetPort: 5002
