k8s/escalation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: escalation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: escalation
  template:
    metadata:
      labels:
        app: escalation
    spec:
      containers:
        - name: escalation
          image: us.gcr.io/servicedesk-dev-361311/escalation 
---

apiVersion: v1
kind: Service
metadata:
  name: escalation-service
spec:
  selector:
    app: escalation
  ports:
    - name: escalation
      protocol: TCP
      port: 5006
      targetPort: 5006
