k8s/groups-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group
  template:
    metadata:
      labels:
        app: group
    spec:
      containers:
        - name: group
          image: us.gcr.io/servicedesk-dev-361311/group 
---

apiVersion: v1
kind: Service
metadata:
  name: group-service
spec:
  selector:
    app: group
  ports:
    - name: group
      protocol: TCP
      port: 5001
      targetPort: 5001
